// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Scan Components - Snapshots > ScanContent - Snapshots > matches snapshot for default ScanContent 1`] = `
<div
  class="hidden md:flex"
  data-testid="container"
>
  <div
    data-testid="page-header"
  >
    <h1
      data-size="large"
      data-testid="page-title"
    >
      Scan 
      <span
        class="text-brand"
      >
        QR Code.
      </span>
    </h1>
    <div
      data-testid="page-subtitle"
    >
      Open Pubky Ring, create a pubky, and scan the QR.
    </div>
  </div>
  <div
    data-layout="column"
    data-testid="content-card"
  >
    <div
      class="items-center justify-center gap-4"
      data-testid="container"
    >
      <div
        class="relative flex h-[220px] w-[220px] items-center justify-center rounded-lg bg-foreground p-4"
      >
        <div
          class="items-center gap-2"
          data-testid="container"
        >
          <svg
            aria-hidden="true"
            class="lucide lucide-qr-code size-8 text-muted-foreground"
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <rect
              height="5"
              rx="1"
              width="5"
              x="3"
              y="3"
            />
            <rect
              height="5"
              rx="1"
              width="5"
              x="16"
              y="3"
            />
            <rect
              height="5"
              rx="1"
              width="5"
              x="3"
              y="16"
            />
            <path
              d="M21 16h-3a2 2 0 0 0-2 2v3"
            />
            <path
              d="M21 21v.01"
            />
            <path
              d="M12 7v3a2 2 0 0 1-2 2H7"
            />
            <path
              d="M3 12h.01"
            />
            <path
              d="M12 3h.01"
            />
            <path
              d="M12 16v.01"
            />
            <path
              d="M16 12h1"
            />
            <path
              d="M21 12v.01"
            />
            <path
              d="M12 21v-1"
            />
          </svg>
          <small
            class="text-muted-foreground"
            data-size="sm"
            data-testid="typography"
          >
            Expired
          </small>
        </div>
      </div>
      <p
        class="text-lg font-semibold tracking-widest text-brand"
        data-testid="typography"
      >
        A9KM-7MJP-ERM9
      </p>
    </div>
  </div>
</div>
`;

exports[`Scan Components - Snapshots > ScanFooter - Snapshots > matches snapshot for default ScanFooter 1`] = `
<div
  data-testid="footer-links"
>
  Use ,[object Object], or any other 
  <a
    data-testid="link"
    href="https://pubky.org"
    target="_blank"
  >
    Pubky Core
  </a>
  –powered keychain.
</div>
`;

exports[`Scan Components - Snapshots > ScanHeader - Snapshots > matches snapshot for desktop ScanHeader 1`] = `
<div
  data-testid="page-header"
>
  <h1
    data-size="large"
    data-testid="page-title"
  >
    Scan 
    <span
      class="text-brand"
    >
      QR Code.
    </span>
  </h1>
  <div
    data-testid="page-subtitle"
  >
    Open Pubky Ring, create a pubky, and scan the QR.
  </div>
</div>
`;

exports[`Scan Components - Snapshots > ScanHeader - Snapshots > matches snapshot for mobile ScanHeader 1`] = `
<div
  data-testid="page-header"
>
  <h1
    data-size="large"
    data-testid="page-title"
  >
    Tap to 
    <span
      class="text-brand"
    >
      Authorize.
    </span>
  </h1>
  <div
    data-testid="page-subtitle"
  >
    Open Pubky Ring, create a pubky, and scan the QR.
  </div>
</div>
`;

exports[`Scan Components - Snapshots > ScanNavigation - Snapshots > matches snapshot for default ScanNavigation 1`] = `
<div
  data-testid="buttons-navigation"
>
  <button
    data-testid="back-button"
  >
    Back
  </button>
</div>
`;
